Abbreviated a little dropown text

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -184,8 +184,8 @@
                         <ul class="nav navbar-nav navbar-right">
                                 <li>
                                     <select class="selectpicker show-tick form-control" id="note_language_select" class="selectpicker show-tick form-control">
-                                            <option id="note_language_select_es" value="es">Public note language - spanish</option>
-                                            <option id="note_language_select_en" value="en">Public note language - english</option>
+                                            <option id="note_language_select_es" value="es">Public note lang. - es</option>
+                                            <option id="note_language_select_en" value="en">Public note lang. - en</option>
                                     </select>
                                 </li>
                             {% block navbar_right_items %}
