Fixed old Tigatrapp labels in map

--- a/tigamap/templates/tigamap/app_filtered.html
+++ b/tigamap/templates/tigamap/app_filtered.html
@@ -178,7 +178,7 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <div class="navbar-brand" title="Tigatrapp Map" style="color:orange;margin-right:15px">
-                                <strong>Tigatrapp Map</strong></div>
+                                <strong>MosquitoAlert Map</strong></div>
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
