--- a/tigamap/templates/tigamap/mapbox_base.html
+++ b/tigamap/templates/tigamap/mapbox_base.html
@@ -6,7 +6,7 @@
 	<head>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<title>Tigatrapp Map</title>
+		<title>MosquitoAlert Map</title>
 <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.css' rel='stylesheet' />
 
