Fixed search layout

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -932,7 +932,7 @@
                             <div class="form-group">
                                 <label for="tags_filter" class="col-sm-2 control-label">Tags:</label>
                                 <div class="col-sm-10">
-                                    <ul id="tags_filter">
+                                    <ul class="tagit ui-widget ui-widget-content ui-corner-all" style="max-width: 300px; min-width: 300px;" id="tags_filter">
                                     </ul>
                                 </div>
                             </div>
