Added exception for non_standard validated reports from 2014, changed photo_grid template to show creation_date

--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -169,7 +169,7 @@
                         <a href="/single_report_map/{{ form.instance.version_UUID }}" target="_blank"><span class="glyphicon glyphicon-link" style="color: white;"></span></a>
                         <p class="p-small"><span class="label label-info">Hide this report</span>{{ form.hide }}</p>
                         <p class="p-small"><span class="label label-success">Report id </span> {{ form.instance.version_UUID }}</p>
-                        <p class="p-small"><span class="label label-success">Date </span> {{ form.instance.server_upload_time }}</p>
+                        <p class="p-small"><span class="label label-success">Date </span> {{ form.instance.creation_time }}</p>
                         <p class="p-small"><span class="label label-success">User Notes </span> {{ form.instance.note }}</p>
                         {% if form.instance.type == 'site' %}
                             {% if form.instance.get_site_cat == 0 %}
